--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Test Site</title>
+</head>
+<body>
+    <h1>Test edit successfull!</h1>
+</body>
+</html>
