--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 <body class="grey">
 <div class="container rounded-lg white b mt-5 mb-5 h-100 p-5 w-100 shadow-lg">
-    <div class="mb-5 w-100" id="chat">
+    <div class="mb-5 w-100 h-100 p-3" id="chat">
         
     </div>
     <br>
     <!--  -->
-    <div class="d-flex justify-content-center p-3 ">
+    <div class="d-flex justify-content-center p-3 border-top border-light">
         <button class="btn-lg btn-success border border-light rounded p-3" onclick="speech ()"><i class="fa fa-microphone-alt fa-3x"></i></button>
     </div>
 </div>
@@ -30,6 +30,7 @@
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/mdb.min.js"></script>
+<script src="js/battery.js"></script>
 <script src="js/handler.js"></script>
 <script src="js/script.js"></script>
 </body>
