--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <br>
     <!--  -->
     <div class="d-flex justify-content-center p-3 border-top border-light">
-        <button class="btn-lg btn-success border border-light rounded p-3" onclick="speech ()"><i class="fa fa-microphone-alt fa-3x"></i></button>
+        <button class="btn-lg btn-success border border-light rounded p-3" onclick="speech ()">
+            <i class="fa fa-microphone-alt fa-3x"></i>
+        </button>
     </div>
 </div>
 <!-- <div class="console p-3 h-100 w-25 bg-dark">
