--- a/test/index.html
+++ b/test/index.html
@@ -16,6 +16,9 @@
             justify-content: center;
             align-items: center;
         }
+        canvas{
+            position: absolute;
+        }
     </style>
 </head>
 <body>
