--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/mdb.min.js"></script>
 <script src="js/battery.js"></script>
+<script src="js/open.js"></script>
+<script src="js/search.js"></script>
 <script src="js/handler.js"></script>
 <script src="js/script.js"></script>
 </body>
