--- a/kn/index.html
+++ b/kn/index.html
@@ -9,7 +9,7 @@
 <body>
     <canvas id="canvas" width="600" height="600"></canvas>
     <span id="whoWin"></span>
-    <p id="whoMove"></p>
+    <p id="whoMove">Ваш ход</p>
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/script.js"></script>
     <script src="js/player.js"></script>
