--- a/kn/index.html
+++ b/kn/index.html
@@ -10,9 +10,9 @@
     <canvas id="canvas" width="600" height="600"></canvas>
     <span id="whoWin"></span>
     <p id="whoMove">Ваш ход</p>
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/script.js"></script>
-    <script src="js/player.js"></script>
-    <script src="js/bot.js"></script>
+    <script src="js/jquery-3.4.1.min.js" defer></script>
+    <script src="js/script.js" defer></script>
+    <script src="js/player.js" defer></script>
+    <script src="js/bot.js" defer></script>
 </body>
 </html>
