--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <title>Голосовой помощник Ясень</title>
 </head>
 <body class="grey">
-<div class="container rounded-lg white b mt-5 mb-5 h-100 p-5 w-100 shadow-lg">
-    <div class="mb-5 w-100 h-100 p-3" id="chat">
+<div class="container rounded-lg white mt-5 mb-5 h-100 pt-5 w-100 shadow-lg">
+    <div class="mb-5 w-100 h-100" id="chat">
         
     </div>
     <br>
