--- a/tess/index.html
+++ b/tess/index.html
@@ -8,10 +8,10 @@
 <body>
     <input type="file" id="ocr_url" accept="image/*">
     <input type="button" id="ocr_button" value="Распознать текст">
-    <select id="sel">
+    <!-- <select id="sel">
         <option value="rus" selected>Русский</option>
         <option value="eng">Английский</option>
-    </select>
+    </select> -->
     <div id="ocr_result"></div>
     <script src="jquery-3.4.1.min.js"></script>
     <script src="tesseract/tesseract.js" defer></script>
