--- a/tess/index.html
+++ b/tess/index.html
@@ -13,6 +13,7 @@
         <option value="eng">Английский</option>
     </select> -->
     <div id="ocr_result"></div>
+    <img src="" alt="" id="img">
     <script src="jquery-3.4.1.min.js"></script>
     <script src="tesseract/tesseract.js" defer></script>
     <script src="script_tesseract.js" defer></script>
