--- a/kn/index.html
+++ b/kn/index.html
@@ -19,11 +19,11 @@
     <div id="cc">
         <span id="whoWin"></span>
     </div>
-    <p id="whoMove">Ваш ход</p>
+    <p id="whoMove">Вы ходите</p>
     <canvas id="canvas" width="600" height="600"></canvas>
     <script src="js/jquery-3.4.1.min.js" defer></script>
     <script src="js/script.js" defer></script>
     <script src="js/player.js" defer></script>
-    <script src="js/bot.js" defer></script>
+    <script src="js/botc.js" defer></script>
 </body>
 </html>
